// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Rules should find all Dog stuff 1`] = `
Array [
  FileSubject {
    "dir": "C://project/src/service",
    "name": "DogService",
    "sourceFile": Object {
      "fileName": "C://project/src/service/DogService",
    },
  },
  FileSubject {
    "dir": "C://project/src/controller",
    "name": "DogController",
    "sourceFile": Object {
      "fileName": "C://project/src/controller/DogController",
    },
  },
  FileSubject {
    "dir": "C://project/src/model",
    "name": "DogModel",
    "sourceFile": Object {
      "fileName": "C://project/src/model/DogModel",
    },
  },
]
`;

exports[`Basic Rules should find all Dog things by prefix 1`] = `
Array [
  FileSubject {
    "dir": "C://project/src/service",
    "name": "DogService",
    "sourceFile": Object {
      "fileName": "C://project/src/service/DogService",
    },
  },
  FileSubject {
    "dir": "C://project/src/controller",
    "name": "DogController",
    "sourceFile": Object {
      "fileName": "C://project/src/controller/DogController",
    },
  },
  FileSubject {
    "dir": "C://project/src/model",
    "name": "DogModel",
    "sourceFile": Object {
      "fileName": "C://project/src/model/DogModel",
    },
  },
]
`;

exports[`Basic Rules should find all Services by file suffix 1`] = `
Array [
  FileSubject {
    "dir": "C://project/src/service",
    "name": "DogService",
    "sourceFile": Object {
      "fileName": "C://project/src/service/DogService",
    },
  },
]
`;

exports[`Basic Rules should find all Services by matching path 1`] = `
Array [
  FileSubject {
    "dir": "C://project/src/service",
    "name": "DogService",
    "sourceFile": Object {
      "fileName": "C://project/src/service/DogService",
    },
  },
]
`;

exports[`Basic Rules should find all Services by suffix 1`] = `
Array [
  FileSubject {
    "dir": "C://project/src/service",
    "name": "DogService",
    "sourceFile": Object {
      "fileName": "C://project/src/service/DogService",
    },
  },
]
`;

exports[`Basic Rules should find all controllers 1`] = `
Array [
  FileSubject {
    "dir": "C://project/src/controller",
    "name": "DogController",
    "sourceFile": Object {
      "fileName": "C://project/src/controller/DogController",
    },
  },
  FileSubject {
    "dir": "C://project/src/controller",
    "name": "CatController",
    "sourceFile": Object {
      "fileName": "C://project/src/controller/CatController",
    },
  },
]
`;

exports[`Basic Rules should not find all Dog things by suffix 1`] = `Array []`;

exports[`Basic Rules should not find all Services by prefix 1`] = `Array []`;
